; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiCamControl.c_raspicamcontrol_set_gains.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiCamControl.c_raspicamcontrol_set_gains.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }
%struct.TYPE_6__ = type { i32 }

@__const.raspicamcontrol_set_gains.rational = private unnamed_addr constant %struct.TYPE_5__ { i32 0, i32 65536, i32 0 }, align 4
@MMAL_PARAMETER_ANALOG_GAIN = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8
@MMAL_PARAMETER_DIGITAL_GAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @raspicamcontrol_set_gains(%struct.TYPE_6__* %0, float %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca %struct.TYPE_5__, align 4
  %9 = alloca i64, align 8
  %10 = alloca { i64, i32 }, align 4
  %11 = alloca { i64, i32 }, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  %12 = bitcast %struct.TYPE_5__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_5__* @__const.raspicamcontrol_set_gains.rational to i8*), i64 12, i1 false)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = icmp ne %struct.TYPE_6__* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %56

16:                                               ; preds = %3
  %17 = load float, float* %6, align 4
  %18 = fmul float %17, 6.553600e+04
  %19 = fptoui float %18 to i32
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  store i32 %19, i32* %20, align 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @MMAL_PARAMETER_ANALOG_GAIN, align 4
  %25 = bitcast { i64, i32 }* %10 to i8*
  %26 = bitcast %struct.TYPE_5__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %25, i8* align 4 %26, i64 12, i1 false)
  %27 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %10, i32 0, i32 0
  %28 = load i64, i64* %27, align 4
  %29 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %10, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i64 @mmal_port_parameter_set_rational(i32 %23, i32 %24, i64 %28, i32 %30)
  store i64 %31, i64* %9, align 8
  %32 = load i64, i64* %9, align 8
  %33 = load i64, i64* @MMAL_SUCCESS, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %16
  %36 = load i64, i64* %9, align 8
  %37 = call i32 @mmal_status_to_int(i64 %36)
  store i32 %37, i32* %4, align 4
  br label %56

38:                                               ; preds = %16
  %39 = load float, float* %7, align 4
  %40 = fmul float %39, 6.553600e+04
  %41 = fptoui float %40 to i32
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  store i32 %41, i32* %42, align 4
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* @MMAL_PARAMETER_DIGITAL_GAIN, align 4
  %47 = bitcast { i64, i32 }* %11 to i8*
  %48 = bitcast %struct.TYPE_5__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %47, i8* align 4 %48, i64 12, i1 false)
  %49 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %11, i32 0, i32 0
  %50 = load i64, i64* %49, align 4
  %51 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %11, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = call i64 @mmal_port_parameter_set_rational(i32 %45, i32 %46, i64 %50, i32 %52)
  store i64 %53, i64* %9, align 8
  %54 = load i64, i64* %9, align 8
  %55 = call i32 @mmal_status_to_int(i64 %54)
  store i32 %55, i32* %4, align 4
  br label %56

56:                                               ; preds = %38, %35, %15
  %57 = load i32, i32* %4, align 4
  ret i32 %57
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @mmal_port_parameter_set_rational(i32, i32, i64, i32) #2

declare dso_local i32 @mmal_status_to_int(i64) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
